Execute TopSitesBackend's shutdown task reliably.

Currently, we see many flaky DCHECKs saying the db_ variable is not cleared
on TopSitesBackend's destruction. This was caused by a bug introduced in
a change db7be2a, which migrates TopSitesBackend's task runner to
task scheduler's. However, by default, the task scheduler doesn't run tasks
remaining on shutdown, unlike the old task runner, which may cause the
ShutdownDBOnDBThread() task to get skipped.

This patch adds BLOCK_SHUTDOWN trait to run ShutDownDBOnDBThread() task
reliably. This should stop the current flakiness. However, this trait is
not desirable in a long term, so a better solution will need to be
implemented.

TBR=treib@chromium.org,sky@chromium.org

Bug: 750786
Change-Id: If311de8949572c80862de035694e82d787d7e706
Reviewed-on: https://chromium-review.googlesource.com/595350
Commit-Queue: Yuta Kitamura <yutak@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Yuta Kitamura <yutak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490850}
Former-commit-id: 2eda659509015d2a9e3d5908d9f0035fece774af