components/history/core/browser/top_sites_backend.cc
@@ -26,7 +26,8 @@ namespace history {
 TopSitesBackend::TopSitesBackend()
     : db_(new TopSitesDatabase()),
       db_task_runner_(base::CreateSequencedTaskRunnerWithTraits(
-          {base::TaskPriority::USER_VISIBLE, base::MayBlock()})) {
+          {base::TaskPriority::USER_VISIBLE,
+           base::TaskShutdownBehavior::BLOCK_SHUTDOWN, base::MayBlock()})) {
   DCHECK(db_task_runner_);
 }
 
